# nextcat

./: .gitignore  .release-please-config.json  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.toml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml  pr-title-check.yml  release.yml
book/: 00-prefaci.md  01-introduccio.md  02-context.md  03-diagnostic.md  04-referents.md  04-tecnologia.md  05-guia-destil.md  05-principis.md  06-recomanacions.md  07-visio.md  CNAME  about-author.md  conceptes-clau.md  license.md  strings.toml
book/translations/en/: 00-prefaci.md  01-introduccio.md  02-serveis.md  03-metodologia.md  04-tecnologia.md  05-guia-destil.md  about-author.md  license.md  strings.toml
overrides/: main.html
scripts/: __init__.py  build.py  epub.py  generate.py  site.py
src/xarter/: __init__.py  build.py  generate.py
templates/: mkdocs.yml  template.typ
templates/epub/: style.css
templates/site/: base.html  chapter.html  index.html  style.css
translations/en/: strings.toml
xarter/: 00-prefaci.md  02-serveis.md  03-metodologia.md  config.toml  index.md  license.md  strings.toml
