[project]
name = "xarter"
version = "0.0.4"
description = "Carta fundacional de l'agència de programari Xarter"
readme = "README.md"
requires-python = ">=3.14"
license = "CC-BY-SA-4.0"
authors = [
    { name = "David Poblador i Garcia", email = "xarter@poblador.com" },
]
dependencies = []

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "dunamai>=1.26.1",
    "mkdocs-material>=9.7.6",
    "typer>=0.24.1",
    "typst>=0.14.8",
]
