[project]
name = "nextcat"
version = "0.0.2"
description = "Apunts per a una estratègia digital de Catalunya: guia per a responsables de política i administració pública"
readme = "README.md"
requires-python = ">=3.14"
license = "CC-BY-SA-4.0"
authors = [
    { name = "David Poblador i Garcia", email = "nextcat@poblador.com" },
]
dependencies = []

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "dunamai>=1.26.1",
    "ebooklib>=0.20",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "resvg-py>=0.3.1",
    "typer>=0.24.2",
    "typst>=0.14.8",
]
